[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/enemyBlack1.png" type="Texture" id=2]
[ext_resource path="res://objects/bullet/BulletSystem.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/explosion.wav" type="AudioStream" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 0.145098, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 24.3777
height = 18.0338

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.74026, 1 )
colors = PoolColorArray( 0.851563, 0, 1, 1, 0.640625, 0, 0.0150146, 1, 0.803922, 0, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
max_value = 2.0
_data = [ Vector2( 0.00195375, 0.9824 ), 0.0, 0.0, 0, 0, Vector2( 0.474676, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
angular_velocity = 45.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
angle = 90.0
angle_random = 1.0
scale = 15.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Trail:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]

[sub_resource type="Animation" id=12]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.466667, 0.466667, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="Area2D" groups=[
"enemies",
]]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="Trail" type="Particles2D" parent="."]
amount = 5
lifetime = 0.5
speed_scale = 2.5
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
explosiveness = 0.75
process_material = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/explode = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/tint = SubResource( 12 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 1.52588e-005, 41.7735 )

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[node name="BulletSystem" parent="." instance=ExtResource( 3 )]
fire_cooldown = 0.15
fire_speed = 600.0
bullet_target = 1

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

